--- a/style.css
+++ b/style.css
@@ -1,30 +1,16 @@
 body{
-    background-color:red;
+    background-color:white;
 }
 
 h1{
-    color:white;
+    color:black;
 }
 p{
-    background-color: gray;
-    color:white
-}
-#p1{
-    background-color: black;
-}
-#p2{
-    background-color:blue;
-}
-#p3{
-    background-color:yellow;
-}
-#p4{
-    background-color:orange;
-}
-
-.odd{
-    color:aliceblue;
-}
-.even{
-    color:purple;
+    border-style:ridge;
+    color:black;
+    font-family: "consolas", "sans-serif";
+    font-style: italic;
+    font-weight: bold;
+    text-decoration: dotted underline;
+    font-size:18px;
 }
