--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
 body{
-    background-color:white;
+    background: linear-gradient(skyblue, lightgreen);
+    background-repeat:no-repeat;
+    background-attachment:fixed;
 }
 
 h1{
+    border-top-style:dotted;
+    border-bottom-style:dotted;
+    border-left-style: double;
+    border-left-width:10px;
+    border-left-color:silver;
     color:black;
 }
 p{
     border-style:ridge;
+    border-width:5px;
+    border-color:gold;
+    border-radius:10px;
+    padding: 5px;
     color:black;
     font-family: "consolas", "sans-serif";
     font-style: italic;
